--- a/css/styles-class.css
+++ b/css/styles-class.css
@@ -1,8 +1,3 @@
-/* divider line on top of a block */
-.top-border section{
-  padding-top: 25px;
-  border-top: 1px solid white;
-}
 /* image gallery grid */
 .grid1 {
   display: grid;
@@ -29,10 +24,14 @@
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 10px;
 }
+/* first line of text indentation */
+.indent {
+  text-indent: 5em;
+}
 
 /* mobile layout */
 @media screen and (max-width: 500px) {
-  article {
+  body {
     grid-template-columns: 1fr;
   }
   .gridxto1 {
