add Chinese language

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,10 @@
   font-family: "canela-thin";
   src: url(../font/canela-web-thin.ttf);
 }
+@font-face {
+  font-family: "source-han-serif-light";
+  src: url(../font/source-han-serif-sc-light.otf);
+}
 html {
   display: grid;
   -webkit-text-size-adjust: 100%;
@@ -39,7 +43,7 @@ h1 {
   font-family: "gt-black";
   font-size: 12em;
   text-transform: uppercase;
-  margin: 200px 30px 20px 30px;
+  margin: 300px 30px 20px 30px;
 }
 /* titles on the left */
 h2 {
@@ -57,6 +61,22 @@ p {
   line-height: 1.35em;
   margin: 0 0 25px 0;
 }
+p:lang(zh) { /* 中文字体 */
+  font-family: "source-han-serif-light";
+  font-size: 1.672em;
+  line-height: 1.65em;
+}
+span:lang(zh) {
+  font-family: "source-han-serif-light";
+  font-size: 0.76em;
+}
+br {
+  content: "";
+  margin-top: 25px;
+  display: block;
+}
+
+
 a:link {
   color: mediumslateblue;
   text-decoration: none;
