--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
   color: black;
   line-height: 1.2;
 }
-main {
+article {
   display: grid;
   grid-template-columns: 1fr 2fr;
   grid-gap: 10px;
@@ -44,7 +44,7 @@ main {
 }
 img {
   width: 100%;
-  margin: 25px 0;
+  margin: 0;
 }
 
 /* big titles */
@@ -93,15 +93,15 @@ br {
 }
 
 a:link {
-  color: mediumslateblue;
+  color: blue;
   text-decoration: none;
 }
 a:visited {
-  color: mediumslateblue;
+  color: blue;
 }
 /*underline effect for active page*/
 nav a.active {
-  border-bottom: 2px solid mediumslateblue;
+  border-bottom: 2px solid blue;
 }
 nav a {
   text-transform: uppercase;
@@ -138,7 +138,7 @@ nav a {
 
 /* mobile layout */
 @media screen and (max-width: 500px) {
-  main {
+  article {
     grid-template-columns: 1fr;
   }
   .gridxto1 {
