--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ h1 {
   margin: 30vh 2vw 0 2vw;
 }
 h1 span:lang(zh) {
-  font-family: Lantinghei SC, Microsoft Yahei;
+  font-family: "Lantinghei SC", "兰亭黑-简", "Microsoft Yahei", "微软雅黑";
   font-weight: 900;
   font-size: 8.5vw;
   position: relative;
@@ -68,7 +68,7 @@ h2 {
   margin: 0 0 0.5vmax 0;
 }
 h2 span:lang(zh) {
-  font-family: Hiragino Sans GB, SimHei;
+  font-family: "Hiragino Sans GB", "冬青黑体简", "SimHei", "黑体";
   font-size: 1.66vmax;
   position: relative;
   top: -0.08vmax; /* shift it up to align with english text */
@@ -83,7 +83,7 @@ p {
   margin: 0;
 }
 p :lang(zh), p span:lang(zh) {
-  font-family: STSong, NSimSun, SimSun;
+  font-family: "STSong", "华文宋体", "NSimSun", "新宋体", "SimSun", "宋体";
   font-size: 1.52vmax;
   line-height: 2.6vmax;
   position: relative;
