--- a/style.css
+++ b/style.css
@@ -52,12 +52,13 @@ h1 {
   text-transform: uppercase;
   margin: 30vh 2vw 0 2vw;
 }
-h1 span:lang(zh) {
+h1:lang(zh), h1 span:lang(zh) {
   font-family: "Lantinghei SC", "兰亭黑-简", "Microsoft Yahei", "微软雅黑", sans-serif;
   font-weight: 900;
   font-size: 8.5vw;
   position: relative;
   top: -0.98vmax; /* shift it up to align with english text */
+  margin: 1vh 2vw 0 2vw;
 }
 
 /* titles on the left */
@@ -67,11 +68,10 @@ h2 {
   text-transform: uppercase;
   margin: 0 0 0.5vmax 0;
 }
-h2 span:lang(zh) {
+h2:lang(zh), h2 span:lang(zh) {
   font-family: "Hiragino Sans GB", "冬青黑体简", "SimHei", "黑体", sans-serif;
-  font-size: 1.66vmax;
+  font-size: 1.72vmax;
   position: relative;
-  top: -0.08vmax; /* shift it up to align with english text */
 }
 
 /* body texts */
@@ -82,23 +82,27 @@ p {
   word-spacing: 0.06vmax; /* bigger space between words */
   margin: 0;
 }
-p :lang(zh), p span:lang(zh) {
+p:lang(zh), p span:lang(zh) {
   font-family: "STSong", "华文宋体", "NSimSun", "新宋体", "SimSun", "宋体", serif;
   font-size: 1.52vmax;
   line-height: 2.6vmax;
   position: relative;
-  top: -0.2vmax; /* shift it up to align with english text */
+  top: -0.16vmax; /* shift it up to align with english text */
 }
 p span:lang(en) {
   font-family: "canela-thin", serif;
-  font-size: 1.52vmax;
+  font-size: 1.6vmax;
   position: relative;
   top: 0.2vmax; /* shift it down to align with chinese text */
 }
+
 br {
   content: "";
-  margin-bottom: 2.8vmax;
+  margin-bottom: 2vmax;
   display: block;
+}
+.list br {
+  margin-bottom: 0;
 }
 
 a:link {
@@ -115,6 +119,8 @@ nav a.active {
 nav a {
   text-transform: uppercase;
 }
+
+
 
 
 /* classes -------------------------------------------------------------------- */
