--- a/style.css
+++ b/style.css
@@ -33,10 +33,9 @@ body {
   background-color: white;
   margin: 0;
   color: black;
-  line-height: 1.2;
 }
 section {
-  margin: 4vh 2vw 4vh 34vw;
+  margin: 2vmax 1.5vmax 2vmax 34vmax;
 }
 img {
   width: 100%;
@@ -46,7 +45,7 @@ img {
 /* page title */
 h1 {
   text-transform: uppercase;
-  margin: 30vh 2vw 0 2vw;
+  margin: 30vh 1.5vmax 0 1.5vmax;
   font-weight: 900;
 }
 h1.en {
@@ -62,9 +61,7 @@ h1.zh {
 /* small title */
 h2 {
   text-transform: uppercase;
-  margin: 6vmax 0 2vmax 0;
-  padding-bottom: 0.5vmax; /* distance between text and border (inside) */
-  border-bottom: 1px solid black;
+  margin: 4vmax 0 2vmax 0;
 }
 h2.en {
   font-family: "gt-regular", sans-serif;
@@ -149,7 +146,7 @@ a:visited {
 /* mobile layout */
 @media screen and (max-width: 500px) {
   section {
-    margin-left: 2vw; /* no white space on the left */
+    margin-left: 1.5vmax; /* no white space on the left */
     margin-top: 8vmax; /* move page content down for the space of the menu button */
   }
   .gridxto1 {
