--- a/style.css
+++ b/style.css
@@ -44,32 +44,17 @@ img {
 
 /* page title */
 h1 {
+  font-size: 12vw; /* set to vw size so it won't overflow horizontally on mobile screen */
+  line-height: 13vw;
   text-transform: uppercase;
   margin: 30vh 1.5vmax 0 1.5vmax;
   font-weight: 900;
 }
 h1.en {
   font-family: "gt-black", sans-serif;
-  font-size: 12vw; /* set to vw size so it won't overflow horizontally on mobile screen */
-  line-height: 13vw;
 }
 h1.zh {
   font-family: "Lantinghei SC", "兰亭黑-简", "Microsoft Yahei", "微软雅黑", sans-serif;
-  font-size: 9.27vw; /* h1 size x0.7727 */
-}
-
-/* small title */
-h2 {
-  text-transform: uppercase;
-  margin: 4vmax 0 2vmax 0;
-}
-h2.en {
-  font-family: "gt-regular", sans-serif;
-  font-size: 2vmax;
-}
-h2.zh {
-  font-family: "Hiragino Sans GB", "冬青黑体简", "SimHei", "黑体", sans-serif;
-  font-size: 1.72vmax;
 }
 
 /* body text */
@@ -81,8 +66,8 @@ p.en, p a.en {
 }
 p.zh, p a.zh {
   font-family: "STSong", "华文宋体", "NSimSun", "新宋体", "SimSun", "宋体", serif;
-  font-size: 1.52vmax;
-  line-height: 2.6vmax;
+  font-size: 1.6vmax;
+  line-height: 2.8vmax;
 }
 p span:lang(en) {
   font-family: "canela-thin", serif;
@@ -100,11 +85,10 @@ p span:lang(en) {
 
 /* link */
 a:link {
-  color: blue;
   text-decoration: none;
 }
 a:visited {
-  color: blue;
+  color: black;
 }
 
 /* classes -------------------------------------------------------------------- */
