language switch still on page body

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
   color: black;
 }
 section {
-  margin: 2vmax 1.5vmax 2vmax 34vmax;
+  margin: 2vmax 1.5vmax 2vmax 34vw;
 }
 img {
   width: 100%;
