--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-.zh {
-  display: none;
-}
 
 @font-face {
   font-family: "gt-black";
@@ -31,6 +28,9 @@
   src: url(font/graphik.ttf);
 }
 
+.zh {
+  display: none;
+}
 html {
   display: grid;
   -webkit-text-size-adjust: 100%;
@@ -43,7 +43,7 @@ body {
   color: black;
 }
 section {
-  margin: 2vmax 1.5vmax 2vmax 34vw;
+  margin-left: 34vw;
 }
 img {
   width: 100%;
@@ -63,6 +63,7 @@ h1.en {
 }
 h1.zh {
   font-family: "Lantinghei SC", "兰亭黑-简", "Microsoft Yahei", "微软雅黑", sans-serif;
+  margin-bottom: 1.5vmax;
 }
 
 /* body text */
@@ -113,12 +114,10 @@ h6 {
     width: 140px;
   }
 }
-footer h6 {
-  margin: 0;
-  width: 100%;
-}
 
-/* line break */
+.text {
+  margin: 3vmax 0 3vmax 0;
+}
 .text br {
   content: "";
   margin-bottom: 2vmax;
@@ -133,7 +132,41 @@ a:visited {
   color: black;
 }
 
-/* classes -------------------------------------------------------------------- */
+.pageDivider {
+  margin-top: 20vh;
+  width: 100%;
+  border-bottom: 1px solid dimgray;
+}
+.nextText {
+  position:absolute;
+  left: 1.5vmax;
+  color: blueviolet;
+}
+#nextPage {
+  width: 100%;
+  height: 70vh;
+  overflow: hidden;
+}
+
+.iframeWrapper {
+  position: relative;
+  padding-top: 60%;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+}
+iframe {
+  border: none;
+  position:absolute;
+  top:0;
+  left:0;
+  height:0;
+  max-height:100%;
+  min-height:100%;
+  width:0;
+  max-width:100%;
+  min-width:100%;
+}
+
 .inline {
   display: inline;
 }
