--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body {
 }
 section {
   margin-left: 34vw;
+  margin-right: 1.5vmax;
 }
 img {
   width: 100%;
@@ -99,23 +100,6 @@ p span:lang(en) {
     top: 1pt;
   }
 }
-
-/* h6 text */
-h6 {
-  font-family: sans-serif;
-  font-size: 14px;
-  font-weight: normal;
-  color: dimgray;
-  margin: 0.5vmax 0 0 1.5vmax;
-  width: 240px;
-}
-@media screen and (max-width: 500px) {
-  h6 {
-    font-size: 7pt;
-    width: 140px;
-  }
-}
-
 .text {
   margin: 3vmax 0 3vmax 0;
 }
@@ -123,6 +107,28 @@ h6 {
   content: "";
   margin-bottom: 2vmax;
   display: block;
+}
+
+/* h6 text */
+h6 {
+  font-family: sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  color: dimgray;
+}
+@media screen and (max-width: 500px) {
+  h6 {
+    font-size: 7pt;
+  }
+}
+h6.imgDescription {
+  margin: 0.5vmax 0 0 1.5vmax;
+  width: 260px;
+}
+@media screen and (max-width: 500px) {
+  h6.imgDescription {
+    width: 140px;
+  }
 }
 
 /* link */
