--- a/style.css
+++ b/style.css
@@ -56,10 +56,10 @@ h1 {
   font-size: 12vw; /* set to vw size so it won't overflow horizontally on mobile screen */
   line-height: 13vw;
   text-transform: uppercase;
-  margin: 30vh 1.5vmax 0 1.5vmax;
+  margin: 20vh 1.5vmax 0 1.5vmax;
   font-weight: 900;
 }
-h1.en {
+h1.en, h1 span:lang(en){
   font-family: "gt-black", sans-serif;
   margin-bottom: 1vmax;
 }
@@ -152,7 +152,7 @@ a:visited {
 }
 #nextPage {
   width: 100%;
-  height: 70vh;
+  height: 60vh;
   overflow: hidden;
 }
 
