--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ section {
 }
 img {
   width: 100%;
-  margin: 0;
+  margin: 0.1vmin 0;
 }
 
 /* page title */
@@ -122,7 +122,7 @@ h6 {
   }
 }
 h6.imgDescription {
-  margin: 0.5vmax 0 0 1.5vmax;
+  margin: 0.5vmax 0 0.5vmax 1.5vmax;
   width: 260px;
 }
 @media screen and (max-width: 500px) {
@@ -155,13 +155,17 @@ a:visited {
   height: 60vh;
   overflow: hidden;
 }
-
 .iframeWrapper {
   position: relative;
-  padding-top: 60%;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
   margin: 5px 0;
+}
+.iframe60 {
+  padding-top: 60%;
+}
+.iframe100 {
+  padding-top: 100%;
 }
 iframe {
   border: none;
@@ -184,31 +188,31 @@ iframe {
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 0.5vmin;
-  padding: 0.25vmin 0;
+  padding-bottom: 0.25vmin;
 }
 .grid2 {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 0.5vmin;
-  padding: 0.25vmin 0;
+  padding-bottom: 0.25vmin;
 }
 .grid3 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 0.5vmin;
-  padding: 0.25vmin 0;
+  padding-bottom: 0.25vmin;
 }
 .grid4 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 0.5vmin;
-  padding: 0.25vmin 0;
+  padding-bottom: 0.25vmin;
 }
 .grid5 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 0.5vmin;
-  padding: 0.25vmin 0;
+  padding-bottom: 0.25vmin;
 }
 
 /* mobile layout */
@@ -221,6 +225,9 @@ iframe {
   }
   .gridxto1 {
     grid-template-columns: 1fr;
+  }
+  .gridxto2 {
+    grid-template-columns: 1fr 1fr;
   }
   .hide-on-mobile {
     display: none;
