--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: "gt-black";
   src: url(font/gt-america-black.otf);
@@ -43,7 +42,7 @@ body {
   margin-left: 34vw;
   margin-right: 1.5vmax;
 }
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 760px) {
   .indent {
     margin-left: 1.5vmax; /* no indentation */
   }
@@ -63,29 +62,25 @@ h1 {
   font-size: 12vw; /* set to vw size so it won't overflow horizontally on mobile screen */
   line-height: 12vw;
   text-transform: uppercase;
-  margin: 20vh 1.5vmax 01vmax 1.5vmax;
+  margin: 20vh 1.5vmax 1vmax 1.5vmax;
 }
 
 /* body text */
 p {
   font-family: "canela-thin", serif;
-  font-size: 2vmax;
-  line-height: 2.8vmax;
+  font-size: calc(10px + .8vw + .8vh);
+  line-height: calc((10px + .8vw + .8vh) * 1.4);
+  word-spacing: calc((10px + .8vw + .8vh) * 0.03); /* bigger space between words */
   margin: 0;
-  word-spacing: 0.06vmax; /* bigger space between words */
-}
-@media screen and (max-width: 500px) {
-  p {
-    font-size: 12pt;
-    line-height: 16.8pt;
-  }
-  .headerText {
-    margin-top: 8vmax; /* move page content down to make space for the menu button */
-  }
 }
 .headerText {
   padding-top: 2vmax;
   padding-bottom: 1.5vmax;
+}
+@media screen and (max-width: 760px) {
+  .headerText {
+    margin-top: 5vmax; /* move page content down to make space for the menu button */
+  }
 }
 .bodyText {
   padding-top: 3vmax;
@@ -100,23 +95,13 @@ p {
 /* h6 text */
 h6 {
   font-family: sans-serif;
-  font-size: 14px;
+  font-size: calc((10px + .8vw + .8vh) * 0.5); /* p size x 0.5 */
   font-weight: normal;
   opacity: 0.55;
+  margin: 0.5vmax 1.5vmax 0.5vmax 1.5vmax;
 }
-@media screen and (max-width: 500px) {
-  h6 {
-    font-size: 6pt;
-  }
-}
-h6.imgDescription {
-  width: 260px;
-  margin: 0.5vmax 0 0.5vmax 1.5vmax;
-}
-@media screen and (max-width: 500px) {
-  h6.imgDescription {
-    width: 140px;
-  }
+.imgDescription {
+  max-width: calc(40px + 8vw + 8vh);;
 }
 
 /* link */
