--- a/style.css
+++ b/style.css
@@ -2,30 +2,34 @@
   font-family: "gt-black";
   src: url(font/gt-america-black.otf);
 }
-@font-face {
+/* @font-face {
   font-family: "gt-regular";
   src: url(font/gt-america-regular.otf);
-}
+} */
 @font-face {
   font-family: "canela-thin";
   src: url(font/canela-web-thin.ttf);
 }
 @font-face {
+  font-family: "haas";
+  src: url(font/NeueHaasDisplay-Roman.ttf);
+}
+/* @font-face {
   font-family: "songti-light";
   src: url(font/songti-light.ttf);
-}
-@font-face {
+} */
+/* @font-face {
   font-family: "lanting-heavy";
   src: url(font/lantinghei-pro-heavy.ttf);
-}
-@font-face {
+} */
+/* @font-face {
   font-family: "plain-light";
   src: url(font/plain-light.ttf);
-}
-@font-face {
+} */
+/* @font-face {
   font-family: "graphik";
   src: url(font/graphik.ttf);
-}
+} */
 
 html {
   display: grid;
@@ -94,15 +98,15 @@ p {
 
 /* h6 text */
 h6 {
-  font-family: sans-serif;
-  font-size: calc(6px + .4vw + .4vh);
-  line-height: calc((6px + .4vw + .4vh) * 1.22);
+  font-family: "haas", sans-serif;
+  font-size: calc(6px + .3vw + .3vh);
+  line-height: calc((6px + .3vw + .3vh) * 1.2);
   font-weight: normal;
   opacity: 0.55;
   margin: 0.5vmax 1.5vmax 0.5vmax 0;
 }
 .imgDescription {
-  max-width: calc(40px + 8vw + 8vh);
+  max-width: calc(40px + 6vw + 6vh);
   margin-left: 1.5vmax;
 }
 
